added other products endpoints
